
class gatos:
    nombre = None
    ubicacion = None
    sexo = None
    amabilidad = None
    adopcion = None
    
    def __init__(self, nombre, ubicacion, sexo, amabilidad, adopcion):
        self.nombre = nombre
        self.ubicacion = ubicacion
        self.sexo = sexo
        self.amabilidad = amabilidad
        self.adopcion = adopcion