class usuarios:
    user = None
    password = None
    
    def __init__(self, user, password):
        self.password = password
        self.user = user